---
created: "2019-04-06T00:15:57.533315700Z"
creator: insta@0.7.1
source: src/opt/tests/redundant.rs
expression: "\n    let outer = 1;\n    switch (x) {\n        case 1:\n            let inner = 2;\n            inner;\n        case 2:\n            inner; // don't forward\n    }\n    outer;\n"
---
_ini = 1
outer <= _ini
_swi = <global x>
_tst = 1
_tst$1 = 2
<switch> _swi:
    <case> _tst:
    _ini$1 = 2
    inner <= _ini$1
    <dead> = _ini$1
    <case> _tst$1:
    <dead> = *inner
<dead> = _ini
